--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "homepage": "https://shimona-agrawal.netlify.app/",
   "scripts": {
+    "start": "npm start",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -46,6 +47,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.1.0"
   }
 }
