--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.8.1",
     "react-router-loader": "^0.5.4",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.6.1",
     "react-swipeable-views": "^0.13.3",
     "react-toastify": "^9.1.3",
     "react-waypoint": "^10.3.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
