--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
