--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "nodemon": "^2.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-glass-magnifier": "^1.1.1",
+    "react-image-magnifiers": "^1.4.0",
     "react-redux": "^8.0.7",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.1",
